# negative-obstacle-detection

./: CMakeLists.txt  README.md  package.xml
config/: cliff_detector_params.yaml  scan_cliff_filter.yaml
include/cliff_detector/: cliff_detector.h
launch/: cliff_detector_sicktim240_testing.launch  cliff_detector_simulation.launch
src/: cliff_detector.cpp  cliff_detector_node.cpp
test/: cliff_detector_test.cpp
