<?xml version="1.0"?>
<package format="2">
  <name>cliff_detector</name>
  <version>0.0.0</version>
  <description>The cliff_detector package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="johnchenguanzhong@gmail.com">johntgz</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>laser_geometry</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs </depend>
  <depend>ddynamic_reconfigure</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rosunit</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
